# JARVIS-Prime

./: .env.example  .gitignore  ADVANCED_LLM_INTEGRATION.md  Dockerfile  LLAMA_13B_GUIDE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TRINITY_TODO.md  V80_INTEGRATION_GUIDE.md  VSCODE_SETUP.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run_server.py  run_supervisor.py  setup_vscode.sh  test_docker_integration.py  test_imports.py  test_local_inference.py  test_trinity_integration.py
config/: unified_config.yaml
examples/: inference_llama_13b.py  train_dpo.py  train_llama_13b.py
examples/config_examples/: llama_13b_gcp.yaml  llama_13b_m1.yaml
jarvis_prime/: __init__.py  server.py
jarvis_prime/configs/: __init__.py  llama_config.py
jarvis_prime/core/: __init__.py  adaptive_rate_limiter.py  advanced_async_primitives.py  advanced_primitives.py  agi_config.py  agi_error_handler.py  agi_integration.py  agi_metrics.py  agi_models.py  agi_persistence.py  apple_silicon_optimizer.py  computer_use_delegate.py  continuous_learning.py  correction_emitter.py  cross_repo_bridge.py  cross_repo_orchestrator.py  data_collector.py  distributed_tracing.py  gcp_vm_manager.py  graph_routing.py  hot_swap_manager.py  hybrid_router.py  inference_engine.py  intelligent_model_router.py  intelligent_request_router.py  jarvis_bridge.py  llama_cpp_executor.py  model_manager.py  model_registry.py  model_server.py  multimodal_fusion.py  observability_bridge.py  predictive_cache.py  reasoning_engine.py  reliability_engines.py  service_mesh.py  telemetry_hook.py  trinity_bridge.py  trinity_bridge_adapter.py  trinity_event_bus.py  (+7 more)
jarvis_prime/docker/: __init__.py  entrypoint.py  llama_server_executor.py  model_downloader.py  reactor_core_watcher.py
jarvis_prime/models/: __init__.py  agi_model_orchestrator.py  continual_learning_system.py  llama_model.py  prime_model.py  self_improving_agent.py
jarvis_prime/scripts/: __init__.py  download_brain.py
jarvis_prime/security/: __init__.py  check_semantic_security.py
jarvis_prime/tiny_prime/: README.md  __init__.py  config.py  presets.py  requirements.txt  semantic_guard.py  trainer.py
jarvis_prime/tiny_prime/config/: model_config.yaml
jarvis_prime/tiny_prime/models/: __init__.py
jarvis_prime/tiny_prime/scripts/: __init__.py  benchmark_inference.py  eval_security_guard.py  export_tiny_prime.py  generate_security_intents.py  init_tiny_prime.py  train_tiny_prime.py  train_tokenizer.py
jarvis_prime/trainer/: __init__.py  llama_trainer.py  prime_trainer.py
